--- a/index.html
+++ b/index.html
@@ -313,11 +313,7 @@
                             <p>My booth at the Sugar Plum Market in Sugar Land! Table runners, flower arrangerments, and pillows. I do it all!</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a>November 2013</a>
                                     </strong>
                                 </li>
                             </ul>
