--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test.png" class="img-responsive img-centered" alt="">
-                            <p>My booth at the Sugar Plum Market in Sugar Land! Table runners, flower arrangerments, and pillows. I do it all!</p>
+                            <p>My booth at the Sugar Plum Market in Sugar Land! Table runners, flower arrangements, and pillows. I do it all!</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong><a>November 2013</a>
