--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Sugar Plum Market</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test.png" class="img-responsive img-centered" alt="">
                             <p>My booth at the Sugar Plum Market in Sugar Land! Table runners, flower arrangements, and pillows. I do it all!</p>
