--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <h2>Inspirational Items</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test2.png" class="img-responsive img-centered" alt="">
-                            <p>I make many different kinds of pillows, the ones shown here are some of my inspirational pillows that leave a positive atmosphere around the house!  <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>I make many different kinds of pillows, the ones shown here are some of my inspirational pillows that leave a positive atmosphere around the house! </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong><a>October 2015</a>
