--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <h2>Accent Pillows</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test3.png" class="img-responsive img-centered" alt="">
-                            <p>This is another example of the many kinds of pillows that I can make. Accent pillows like these can add a great touch to any part of your house!.</p>
+                            <p>This is another example of the many kinds of pillows that I can make. Accent pillows like these can add a great touch to any part of your house!</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong><a>January 2016</a>
