--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Decorations</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test5.png" class="img-responsive img-centered" alt="">
-                            <p>I also make a lot of flower arrangements and table decorations. A few decorations can really turn something dull into something exciting!. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>I also make a lot of flower arrangements and table decorations. A few decorations can really turn something dull into something exciting!.</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong><a>February 2016</a>
