--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Tutti Bello</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,7 +79,7 @@
                     <div class="intro-text">
                         <span class="name">Adriana Deplano</span>
                         <hr class="star-light">
-                        <span class="skills">Interior Designer - Apholstery - User Experience Designer</span>
+                        <span class="skills">Interior Design - Floral Design - Seamstress</span>
                     </div>
                 </div>
             </div>
