--- a/index.html
+++ b/index.html
@@ -171,16 +171,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I have been in the business of interior decor and design for over 16 years. Everything I create is handmade and filled with my passion.  The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I have been in the business of interior decor and design for over 16 years. Everything I create is handmade and filled with my passion.  </p>
                 </div>
                 <div class="col-lg-4">
                     <p>Services that I provide include: Floral arrangements, Accent Pillows, Drapes, Christmas Garlands and Wreaths, Christmas Decorations, and Table runners.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
