--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I have been in the business of interior decor and design for over 16 years. Everything I create is handmade and filled with my passion.  </p>
+                    <p>I have been in the business of interior design and decor for over 16 years. Everything I create is handmade and filled with my passion.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Services that I provide include: Floral arrangements, Accent Pillows, Drapes, Christmas Garlands and Wreaths, Christmas Decorations, and Table runners.</p>
+                    <p>Services that I provide include: floral arrangements, accent pillows, drapes, christmas garlands and wreaths, christmas decorations, and table runners.</p>
                 </div>
 
             </div>
