--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/test6.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
