--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/test6.png" class="img-responsive img-centered" alt="">
-                            <p>These are some curtains I made for one of the rooms in my house. I've made a variety of curtains for many different clients who have all loved what I made! The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>These are some curtains I made for one of the rooms in my house. I've made a variety of curtains for many different clients who have all loved what I made!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
