--- a/index.html
+++ b/index.html
@@ -453,16 +453,8 @@
                             <img src="img/portfolio/test6.png" class="img-responsive img-centered" alt="">
                             <p>These are some curtains I made for one of the rooms in my house. I've made a variety of curtains for many different clients who have all loved what I made!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a>May 2013</a>
                                     </strong>
                                 </li>
                             </ul>
