--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p><br>Sugar Land, TX 77478</p>
+                        <p>Sugar Land, TX 77478</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
