--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
+                        method="post"
                     </form>
                 </div>
             </div>
