--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p>I have been in the business of interior design and decor for over 16 years. Everything I create is handmade and filled with my passion.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Services that I provide include: floral arrangements, accent pillows, drapes, christmas garlands and wreaths, christmas decorations, and table runners.</p>
+                    <p>Services that I provide include: floral arrangements, accent pillows, drapes, christmas garlands and wreaths, christmas decorations, and table runners. Have any questions or want to see more? Fill out the contact page below!</p>
                 </div>
 
             </div>
